improve styling of SearchComponent and fix some ui issues on mobile

--- a/src/app/shared/components/search/search.component.scss
+++ b/src/app/shared/components/search/search.component.scss
@@ -87,10 +87,8 @@ app-search {
 
     .search-component-input-container {
       grid-area: search-component-input-area;
-      display: flex;
-      justify-content: space-between;
       .search-component-input {
-        width: 80%;
+        width: 100%;
         height: 35px;
         border-radius: 5px;
         border: 1px solid #416770;
@@ -103,21 +101,8 @@ app-search {
         &:focus {
           outline: transparent;
         }
-        @media (min-width: $md) {
-          width: 100%;
-        }
       }
-      .search-component-close-btn {
-        width: 35px;
-        height: 35px;
-        min-width: unset;
-        padding: 0;
-        text-align: center;
-        border-radius: 50%;
-        @media (min-width: $md) {
-          display: none;
-        }
-      }
+
     }
     
 
@@ -156,5 +141,20 @@ app-search {
       }
     }
 
+  }
+
+  .search-component-close-btn {
+    position: absolute;
+    top: calc(50% - 25px);
+    right: 17.5px;
+    width: 35px;
+    height: 35px;
+    min-width: unset;
+    padding: 0;
+    text-align: center;
+    border-radius: 50%;
+    @media (min-width: $md) {
+      display: none;
+    }
   }
 }
